Finished rebounds. Start Score.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 		<main>
 			<div class="wrapper-playzone">
 				<h2>PONG</h2>
+				<div class="wrapper-options">
+
+				</div>
 				<div class="wrapper-game">
 					<canvas id="canvas" width="1290px" height="620px" tabindex="0"></canvas>
 				</div>
