Done SVGs; displayed Score.

--- a/index.html
+++ b/index.html
@@ -22,16 +22,25 @@
 
 		</header>
 		<main>
+			<h2>PONG</h2>
 			<div class="wrapper-playzone">
-				<h2>PONG</h2>
 				<div class="wrapper-options">
 
 				</div>
 				<div class="wrapper-game">
-					<canvas id="canvas" width="1290px" height="620px" tabindex="0"></canvas>
+					<div class="wrapper-canvas">
+						<canvas id="canvas" width="1290px" height="620px" tabindex="0"></canvas>
+					</div>
+					<div class="wrapper-controls"></div>
 				</div>
-				<div class="wrapper-chat"></div>
-				<div class="wrapper-controls"></div>
+				<div class="wrapper-chat">
+					<div class="chat-display">
+
+					</div>
+					<div class="chat-input">
+
+					</div>
+				</div>
 			</div>
 		</main>
 		<footer>
