Finished first alpha version of Login's page.

--- a/game.html
+++ b/game.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +13,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<!--My CSS-->
-		<link rel="stylesheet" type="text/css" href="./game_style.css">
+		<link rel="stylesheet" type="text/css" href="./game.css">
 		<!--My JS-->
 		<script src="./js/pong.js" defer></script>
 	</head>
