Done animations on login page.

--- a/login.html
+++ b/login.html
@@ -20,6 +20,8 @@
 		<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 		<!--My CSS-->
 		<link rel="stylesheet" type="text/css" href="./login.css">
+		<!--My JS-->
+		<script src="./js/login.js" defer></script>
 	</head>
 	<body>
 		<main>
@@ -31,15 +33,12 @@
 					<form>
 						<input type="email" placeholder="Email" aria-label="Email" tabindex="1"/>
 						<input type="password" placeholder="Mot de passe" aria-label="Mot de passe" tabindex="2"/>
-						<button aria-label="Connection ou Inscription" tabindex="2">Connexion/Inscription</button>
+						<button tabindex="2">Connexion/Inscription</button>
 						<p aria-label="Mot de passe oublie" tabindex="3">Mot de passe oublie</p>
 					</form>
 					<div class="wrapper-sp-login">
 						<button class="sp-login login-42" aria-label="Connexion avec 42" tabindex="4">
-							<svg version="1.1"
-								id="Calque_1" sodipodi:docname="42_logo.svg" inkscape:version="0.48.2 r9819" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
-								xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 -200 960 960"
-								enable-background="new 0 -200 960 960" xml:space="preserve" class="svg">
+							<svg version="1.1" id="Calque_1" sodipodi:docname="42_logo.svg" inkscape:version="0.48.2 r9819" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 -200 960 960" enable-background="new 0 -200 960 960" xml:space="preserve" class="svg">
 								<polygon id="polygon5" points="32,412.6 362.1,412.6 362.1,578 526.8,578 526.8,279.1 197.3,279.1 526.8,-51.1 362.1,-51.1
 								32,279.1 "/>
 								<polygon id="polygon7" points="597.9,114.2 762.7,-51.1 597.9,-51.1 "/>
@@ -48,24 +47,16 @@
 							</svg>
 							Connexion avec 42
 						</button>
-						<button class="sp-login login-google" aria-label="Connexion avec Google" tabindex="5">
+						<button class="sp-login login-google" aria-label="Connexion avec Google" tabindex="5" onload="loadGoogleButtonWidth()" z-index="0">
 							<div id="g_id_onload"
 								data-client_id="758405755747-7nrn695q1lo3pgg28f1nafdbgd9d3sf4.apps.googleusercontent.com"
 								data-login_uri="https://localhost:5500/google-oauth"
 								data-auto_prompt="false">
 							</div>
-							<div class="g_id_signin"
-								data-type="standard"
-								data-size="large"
-								data-theme="outline"
-								data-text="sign_in_with"
-								data-shape="rectangular"
-								data-logo_alignment="left">
-							</div>
 						</button>
 						<button class="sp-login login-guest" aria-label="Jouer sans se connecter" tabindex="6">
-							<img src="./svg/incognito.svg" height="30" width="30"/>
-							Connexion en tant qu'Invite
+							<img src="./svg/incognito.svg" height="30" width="50"/>
+							Jouer en tant qu'Invite
 						</button>
 					</div>
 				</div>
