Done responsive for login. Started doing designing for game.

--- a/game.html
+++ b/game.html
@@ -19,32 +19,29 @@
 	</head>
 	<body>
 		<header>
-
+			<!--  -->
 		</header>
 		<main>
 			<h2>PONG</h2>
 			<div class="wrapper-playzone">
-				<div class="wrapper-options">
+				<div class="wrapper-options card">
 
 				</div>
 				<div class="wrapper-game">
-					<div class="wrapper-canvas">
+					<div class="wrapper-canvas card">
 						<canvas id="canvas" width="1290px" height="620px" tabindex="0"></canvas>
 					</div>
-					<div class="wrapper-controls"></div>
+					<div class="wrapper-controls card"></div>
 				</div>
 				<div class="wrapper-chat">
-					<div class="chat-display">
+					<div class="chat-display card">
 
 					</div>
-					<div class="chat-input">
+					<div class="chat-input card">
 
 					</div>
 				</div>
 			</div>
 		</main>
-		<footer>
-
-		</footer>
 	</body>
 </html>
