--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 	<head>
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="Jouez au celebre jeu-video des annees 70, PONG !">
 		<title>ft_transcendance</title>
 		<!--Normalize-->
@@ -25,14 +25,14 @@
 	</head>
 	<body>
 		<main>
-			<div class="wrapper-login">
+			<div class="wrapper-login card">
 				<div class="wrapper-title">
 					<h1>ft_transcendance</h1>
 				</div>
 				<div class="wrapper-connection">
 					<form>
-						<input type="email" placeholder="Email" aria-label="Email" tabindex="1"/>
-						<input type="password" placeholder="Mot de passe" aria-label="Mot de passe" tabindex="2"/>
+						<input name="email" type="email" placeholder="Email" aria-label="Email" tabindex="1"/>
+						<input name="password" type="password" placeholder="Mot de passe" aria-label="Mot de passe" tabindex="2"/>
 						<button tabindex="2">Connexion/Inscription</button>
 						<p aria-label="Mot de passe oublie" tabindex="3">Mot de passe oublie</p>
 					</form>
