Started selection menu.

--- a/login.html
+++ b/login.html
@@ -47,7 +47,7 @@
 							</svg>
 							Connexion avec 42
 						</button>
-						<button class="sp-login login-google" aria-label="Connexion avec Google" tabindex="5" onload="loadGoogleButtonWidth()" z-index="0">
+						<button class="sp-login login-google" aria-label="Connexion avec Google" tabindex="5" onload="loadGoogleButtonWidth()">
 							<div id="g_id_onload"
 								data-client_id="758405755747-7nrn695q1lo3pgg28f1nafdbgd9d3sf4.apps.googleusercontent.com"
 								data-login_uri="https://localhost:5500/google-oauth"
