--- a/game.html
+++ b/game.html
@@ -25,11 +25,41 @@
 			<h2>PONG</h2>
 			<div class="wrapper-playzone">
 				<div class="wrapper-options card">
-
+					<form>
+						<div>
+							<span aria-label="Choisissez le jeu">Jeu</span>
+							<label>
+								<input type="radio" name="game" aria-label="Pong"/>
+								<div>
+									<img src="./svg/pong.svg"/>
+								</div>
+							</label>
+							<label>
+								<input type="radio" name="game" aria-label="Tetris"/>
+								<div>
+									<img src="./svg/tetris.svg"/>
+								</div>
+							</label>
+						</div>
+						<div>
+							<span aria-label="Choisissez le mode">Mode</span>
+							<div>
+								Local
+								<input type="radio" name="mode">1vIA</input>
+								<input type="radio" name="mode">1v1</input>
+								<input type="radio" name="mode">Tournoi a 4 (1v1v1v1)</input>
+							</div>
+							<div>
+								Online
+								<input type="radio" name="mode">1v1</input>
+							</div>
+						</div>
+						<button aria-label="Jouer !">Jouer !</buttonb>
+					</form>
 				</div>
 				<div class="wrapper-game">
 					<div class="wrapper-canvas card">
-						<canvas id="canvas" width="1290px" height="620px" tabindex="0"></canvas>
+						<canvas id="canvas" width="1179px" height="581px" tabindex="0"></canvas>
 					</div>
 					<div class="wrapper-controls card"></div>
 				</div>
