--- a/html/game.html
+++ b/html/game.html
@@ -12,7 +12,7 @@
 		<!--Google Font-->
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 		<!--My CSS-->
 		<link rel="stylesheet" type="text/css" href="../css/game.css">
@@ -22,7 +22,7 @@
 	</head>
 	<body>
 		<header>
-			<!--  -->
+			<h1>ft_transcendance</h1>
 		</header>
 		<main>
 			<h2>PONG</h2>
@@ -48,9 +48,9 @@
 						</div>
 						<div class="section-selector">
 							<h3 aria-label="Choisissez le mode de jeu: ">Mode</h3>
-							<div>
+							<div class="wrapper-mode-selector">
 								<label class="mode-selector">
-									<input type="radio" name="mode" value="1vAI" aria-label="Joueur contre Ordinateur"/>
+									<input disabled type="radio" name="mode" value="1vAI" aria-label="Joueur contre Ordinateur"/>
 									<div class="circle"></div>
 									<span>1vIA</span>
 								</label>
@@ -60,12 +60,12 @@
 									<span>1v1 local</span>
 								</label>
 								<label class="mode-selector">
-									<input type="radio" name="mode" value="tournament" aria-label="Tournoi a 4 joueurs en local"/>
+									<input disabled type="radio" name="mode" value="tournament" aria-label="Tournoi a 4 joueurs en local"/>
 									<div class="circle"></div>
 									<span>Tournoi local a 4</span>
 								</label>
 								<label class="mode-selector">
-									<input type="radio" name="mode" value="online" aria-label="Joueur contre Joueur en ligne"/>
+									<input disabled type="radio" name="mode" value="online" aria-label="Joueur contre Joueur en ligne"/>
 									<div class="circle"></div>
 									<span>1v1 en ligne</span>
 								</label>
@@ -74,7 +74,6 @@
 						<div class="wrapper-submit-button">
 							<button id="selector" type="button" aria-label="Jouer !">
 								<span>Inserer une piece</span>
-								<!-- <div class="coin"></div> -->
 								<div>
 									<div class="slot"></div>
 								</div>
@@ -86,7 +85,14 @@
 					<div class="wrapper-canvas card">
 						<canvas id="canvas" width="1179px" height="581px" tabindex="0"></canvas>
 					</div>
-					<div class="wrapper-controls card"></div>
+					<div class="wrapper-controls card">
+						<div class="player-control player1">
+							<img class="stick" src="../svg/stick/state0.svg"/>
+						</div>
+						<div class=" player-control player2">
+							<img class="stick" src="../svg/stick/state0.svg"/>
+						</div>
+					</div>
 				</div>
 				<div class="wrapper-chat">
 					<div class="chat-display card">
