--- a/html/login.html
+++ b/html/login.html
@@ -12,8 +12,7 @@
 		<!--Google Font-->
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 		<!--My CSS-->
 		<link rel="stylesheet" type="text/css" href="../css/login.css">
 		<!--My JS-->
@@ -26,14 +25,14 @@
 					<h1>ft_transcendance</h1>
 				</div>
 				<div class="wrapper-connection">
-					<form>
+					<form autocomplete="on">
 						<input name="email" type="email" placeholder="Email" aria-label="Email" tabindex="1"/>
 						<input name="password" type="password" placeholder="Mot de passe" aria-label="Mot de passe" tabindex="2"/>
-						<button tabindex="2">Connexion/Inscription</button>
-						<p aria-label="Mot de passe oublie" tabindex="3">Mot de passe oublie</p>
+						<button class="notransition" tabindex="3">Connexion/Inscription</button>
+						<p aria-label="Mot de passe oublie" tabindex="4">Mot de passe oublie</p>
 					</form>
 					<div class="wrapper-sp-login">
-						<button class="sp-login login-42" aria-label="Connexion avec 42" tabindex="4">
+						<button class="sp-login login-42" aria-label="Connexion avec 42" tabindex="5">
 							<svg version="1.1" id="Calque_1" sodipodi:docname="42_logo.svg" inkscape:version="0.48.2 r9819" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 -200 960 960" enable-background="new 0 -200 960 960" xml:space="preserve" class="svg">
 								<polygon id="polygon5" points="32,412.6 362.1,412.6 362.1,578 526.8,578 526.8,279.1 197.3,279.1 526.8,-51.1 362.1,-51.1
 								32,279.1 "/>
@@ -44,7 +43,7 @@
 							Connexion avec 42
 						</button>
 						<button class="sp-login login-guest" aria-label="Jouer sans se connecter" tabindex="6">
-							<img src="./svg/incognito.svg" height="30" width="50"/>
+							<img src="../svg/incognito.svg" height="30" width="50"/>
 							Jouer en tant qu'Invite
 						</button>
 					</div>
