--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							Connexion avec 42
 						</button>
 						<button class="sp-login login-guest" aria-label="Jouer sans se connecter" tabindex="6">
-							<img src="../svg/incognito.svg" height="30" width="50"/>
+							<img src="./svg/incognito.svg" height="30" width="50"/>
 							Jouer en tant qu'Invite
 						</button>
 					</div>
@@ -67,13 +67,13 @@
 								<label class="game-selector">
 									<input type="radio" name="game" value="pong" aria-label="Pong"/>
 									<div>
-										<img src="../svg/pong.svg"/>
+										<img src="./svg/pong.svg"/>
 									</div>
 								</label>
 								<label class="game-selector">
 									<input type="radio" name="game" value="tetris" aria-label="Tetris"/>
 									<div>
-										<img src="../svg/tetris.svg"/>
+										<img src="./svg/tetris.svg"/>
 									</div>
 								</label>
 							</div>
@@ -119,10 +119,10 @@
 					</div>
 					<div class="wrapper-controls card">
 						<div class="player-control player1">
-							<img class="stick" src="../svg/stick/state0.svg"/>
+							<img class="stick" src="./svg/stick/state0.svg"/>
 						</div>
 						<div class=" player-control player2">
-							<img class="stick" src="../svg/stick/state0.svg"/>
+							<img class="stick" src="./svg/stick/state0.svg"/>
 						</div>
 					</div>
 				</div>
