Preparation for SPA's implementation; Fixed double input sticks.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="Jouez au celebre jeu-video des annees 70, PONG !">
+		<meta name="description" content="Jouez au célèbre jeu-video des années 70, PONG !">
 		<title>ft_transcendance</title>
 		<!--Normalize-->
 		<link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
@@ -25,37 +25,6 @@
 		<header>
 			<h1>ft_transcendance</h1>
 		</header>
-		<div class="layer">
-			<div class="wrapper-login card">
-				<div class="wrapper-title">
-					<h1>ft_transcendance</h1>
-				</div>
-				<div class="wrapper-connection">
-					<form autocomplete="on">
-						<input name="email" type="email" placeholder="Email" aria-label="Email" tabindex="1"/>
-						<input name="password" type="password" placeholder="Mot de passe" aria-label="Mot de passe" tabindex="2"/>
-						<button class="notransition" tabindex="3">Connexion/Inscription</button>
-						<p aria-label="Mot de passe oublie" tabindex="4">Mot de passe oublie</p>
-					</form>
-					<div class="wrapper-sp-login">
-						<button class="sp-login login-42" aria-label="Connexion avec 42" tabindex="5">
-							<svg version="1.1" id="Calque_1" sodipodi:docname="42_logo.svg" inkscape:version="0.48.2 r9819" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 -200 960 960" enable-background="new 0 -200 960 960" xml:space="preserve" class="svg">
-								<polygon id="polygon5" points="32,412.6 362.1,412.6 362.1,578 526.8,578 526.8,279.1 197.3,279.1 526.8,-51.1 362.1,-51.1
-								32,279.1 "/>
-								<polygon id="polygon7" points="597.9,114.2 762.7,-51.1 597.9,-51.1 "/>
-								<polygon id="polygon9" points="762.7,114.2 597.9,279.1 597.9,443.9 762.7,443.9 762.7,279.1 928,114.2 928,-51.1 762.7,-51.1 "/>
-								<polygon id="polygon11" points="928,279.1 762.7,443.9 928,443.9 "/>
-							</svg>
-							Connexion avec 42
-						</button>
-						<button class="sp-login login-guest" aria-label="Jouer sans se connecter" tabindex="6">
-							<img src="./svg/incognito.svg" height="30" width="50"/>
-							Jouer en tant qu'Invite
-						</button>
-					</div>
-				</div>
-			</div>
-		</div>
 		<main>
 			<h2>PONG</h2>
 			<div class="wrapper-playzone">
@@ -105,7 +74,7 @@
 						</div>
 						<div class="wrapper-submit-button">
 							<button id="selector" type="button" aria-label="Jouer !">
-								<span>Inserer une piece</span>
+								<span>Insérer une pièce</span>
 								<div>
 									<div class="slot"></div>
 								</div>
