Done basic SPA implementation; retracted sticks at endgame; fixed let into const.

--- a/pages/login.html
+++ b/pages/login.html
@@ -22,7 +22,7 @@
 					Connexion avec 42
 				</button>
 				<button class="sp-login login-guest" aria-label="Jouer sans se connecter" tabindex="6">
-					<img src="./svg/incognito.svg" height="30" width="50"/>
+					<img src="/svg/incognito.svg" height="30" width="50"/>
 					Continuer en tant qu'Invite
 				</button>
 			</div>
