Added favicon; Started placeholder user and menu on hover.

--- a/pages/game.html
+++ b/pages/game.html
@@ -1,5 +1,23 @@
 <header>
 	<h1>ft_transcendance</h1>
+	<div class="wrapper-user">
+		<button class="user">
+			<img src="/favicon.ico"/>
+			<span>Alexioos95</span>
+			<nav class="menu">
+				<ul>
+					<li>
+						<span>Options</span>
+						<i class="fa-solid fa-gear"></i>
+					</li>
+					<li class="login-button">
+						<span>Se deconnecter</span>
+						<i class="fa-solid fa-arrow-right-to-bracket"></i>
+					</li>
+				</ul>
+			</nav>
+		</button>
+	</div>
 </header>
 <main>
 	<h2>PONG</h2>
@@ -12,13 +30,13 @@
 						<label class="game-selector">
 							<input type="radio" name="game" value="pong" aria-label="Pong"/>
 							<div>
-								<img src="./svg/pong.svg"/>
+								<img src="/svg/pong.svg"/>
 							</div>
 						</label>
 						<label class="game-selector">
 							<input type="radio" name="game" value="tetris" aria-label="Tetris"/>
 							<div>
-								<img src="./svg/tetris.svg"/>
+								<img src="/svg/tetris.svg"/>
 							</div>
 						</label>
 					</div>
