--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="Jouez au célèbre jeu-video des années 70, PONG !">
 		<title>ft_transcendance</title>
+		<link rel="icon" type="image/x-icon" href="/favicon.ico">
 		<!--Normalize-->
 		<link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
 		<!--Font Awesome-->
