Changed nav placement.

--- a/pages/game.html
+++ b/pages/game.html
@@ -1,26 +1,30 @@
 <header>
 	<h1>ft_transcendance</h1>
-	<div class="wrapper-user">
-		<button class="user">
-			<img src="/favicon.ico"/>
-			<span>Alexioos95</span>
-			<nav class="menu">
-				<ul>
-					<li>
-						<span>Options</span>
-						<i class="fa-solid fa-gear"></i>
-					</li>
-					<li class="login-button">
-						<span>Se deconnecter</span>
-						<i class="fa-solid fa-arrow-right-to-bracket"></i>
-					</li>
-				</ul>
-			</nav>
-		</button>
-	</div>
+	<nav>
+		<ul>
+			<li>
+				<div>
+					<img src="/favicon.ico"/>
+					<span>Alexioos95</span>
+				</div>
+			</li>
+			<li>
+				<button>
+					<i class="fa-solid fa-gear"></i>
+					<span>Options</span>
+				</button>
+			</li>
+			<li>
+				<button class="login-button">
+					<i class="fa-solid fa-arrow-right-to-bracket"></i>
+					<span>Se deconnecter</span>
+				</button>
+			</li>
+		</ul>
+	</nav>
 </header>
 <main>
-	<h2>PONG</h2>
+	<h2>LOADING</h2>
 	<div class="wrapper-playzone">
 		<div class="wrapper-options card">
 			<form>
