Finished refacto; Made canvas dynamic and responsive; started creating tournaments.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="Jouez au célèbre jeu-video des années 70, PONG !">
 		<title>ft_transcendance</title>
-		<link rel="icon" type="image/x-icon" href="./favicon.ico">
+		<link rel="icon" type="image/x-icon" href="/favicon.ico">
 		<!--Normalize-->
 		<link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
 		<!--Font Awesome-->
@@ -16,12 +16,12 @@
 		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 		<!--My CSS-->
-		<link rel="stylesheet" type="text/css" href="./index.css">
+		<link rel="stylesheet" type="text/css" href="/index.css">
 		<!--My JS-->
-		<script src="./js/game.js" defer></script>
-		<script src="./js/pong.js" defer></script>
-		<script src="./js/login.js" defer></script>
-		<script src="./js/index.js" defer></script>
+		<script src="/js/game.js" defer></script>
+		<script src="/js/pong.js" defer></script>
+		<script src="/js/login.js" defer></script>
+		<script src="/js/index.js" defer></script>
 	</head>
 	<body>
 	</body>
